# quickbooks-desktop-mcp

./: .gitignore  README.md  pyproject.toml
installer/: NEXT_STEPS.txt  README.md  build_skill_zip.py  configure_claude_desktop.py  entrypoint.py  qbbridge_setup.iss
skills/qbbridge-bookkeeping/: SKILL.md
src/qbbridge_mcp/: __init__.py  qbxml.py  server.py  undo.py
